--- a/assets/css/contact_us.css
+++ b/assets/css/contact_us.css
@@ -1,5 +1,6 @@
 .contact-section {
-    padding: 120px 0 80px;
+    margin-top: 100px;
+    padding: 40px 0 20px;
 }
 
 .contact-header {
@@ -8,16 +9,17 @@
 }
 
 .contact-header h1 {
-    color: var(--text-black);
-    font-size: 2.5rem;
+    color: #3F3E5D;
+    font-size: 34px;
     font-weight: bold;
     margin-bottom: 20px;
 }
 
 .contact-desc {
-    color: var(--text-black);
-    font-size: 1.2rem;
+    color: #3F3E5D;
+    font-size: 20px;
     margin-top: 100px;
+    font-weight: bold;
 }
 
 .contact-list {
@@ -43,7 +45,8 @@
     border-radius: 50%;
     overflow: hidden;
     flex-shrink: 0;
-    border: 5px solid var(--text-black);
+    border: 5px solid #3E3E5C;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4)
 }
 
 .country-flag {
@@ -57,8 +60,8 @@
 }
 
 .contact-details h3 {
-    color: var(--text-black);
-    font-size: 1.2rem;
+    color: #3F3E5D;
+    font-size: 20px;
     margin-bottom: 5px;
     font-weight: bold;
 }
@@ -66,9 +69,9 @@
 .contact-email {
     display: flex;
     align-items: center;
-    color: var(--text-black);
     text-decoration: none;
-    font-size: 1rem;
+    color: #3F3E5D;
+    font-size: 20px;
     transition: color 0.3s ease;
 }
 
@@ -89,7 +92,7 @@
 
 @media (max-width: 768px) {
     .contact-section {
-        padding: 100px 0 60px;
+        padding: 60px 0;
     }
 
     .contact-header h1 {
@@ -97,12 +100,12 @@
     }
 
     .contact-desc {
-        font-size: 1.2rem;
+        font-size: 15px;
     }
 
     .contact-list {
-        padding: 20px;
-        margin: 0 15px;
+        padding: 0;
+        align-items: center;
     }
 
     .contact-item {
