--- a/assets/css/var.css
+++ b/assets/css/var.css
@@ -32,7 +32,7 @@
     --orange: #FFB65E;
     --white: white;
     --text-gray: #808080;
-    --light-blue: #BED7E8;
+    --light-blue: #91BBE3;
     --sky-blue: #91BBE3;
     --dark-gray: #333;
     --light-gray: #f5f5f5;
