--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -99,7 +99,7 @@
 .path-description {
     margin: 0 auto 40px;
     text-align: justify;
-    color: var(--text-black);
+    color: #3F3E5D;
 }
 
 .table-responsive {
