--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -246,9 +246,6 @@
 /* --------------------------------------------------------------- */
 /* Partner Section */
 /* --------------------------------------------------------------- */
-/* .partner-section .container {
-    max-width: 900px;
-} */
 
 .partner-section {
     padding: 50px 0;
@@ -259,11 +256,11 @@
     font-size: 24px;
     padding-bottom: 30px;
     font-weight: bold;
-    color: #707070;
+    color: #3F3E5D;
 }
 
 .country-name {
-    color: #707070;
+    color: #3F3E5D;
     font-size: 20px;
     font-weight: 500;
     display: flex;
