--- a/assets/css/responsive/main/main_768.css
+++ b/assets/css/responsive/main/main_768.css
@@ -1,4 +1,4 @@
-@media (max-width: 576px) {
+@media (max-width: 768px) {
 
     /* --------------------------------------------------------------- */
     /* Navbar */
@@ -18,18 +18,35 @@
 
     .nav-link {
         font-size: 0.9rem;
-        padding: 8px 15px;
+        padding: 24px 32px !important;
+    }
+
+    .dropdown-menu {
+        padding-top: 0;
+        padding-left: 24px;
+    }
+
+    .dropdown-item {
+        padding: 1rem 1rem;
     }
 
     /* --------------------------------------------------------------- */
     /* Register Button */
     /* --------------------------------------------------------------- */
+    
     .register-btn {
-        right: 30px;
-        top: 5px;
+        padding: 8px 16px !important;
+        font-size: 14px !important;
+        right: 1%;
+    }
+
+    .navbar-toggler {
+        border: none;
+        padding: 0.5rem;
+        color: white;
     }
 
     .footer p {
-        font-size: 0.7rem;
+        font-size: 0.8rem;
     }
 }
