--- a/assets/css/responsive/index/index_768.css
+++ b/assets/css/responsive/index/index_768.css
@@ -33,7 +33,7 @@
     .power-title {
         display: block;
         margin-bottom: 15px;
-        font-size: 1.2em;
+        font-size: 1em;
     }
 
     .partners-container {
@@ -150,7 +150,6 @@
 
     .malaysia-first-logo {
         width: 100%;
-        max-width: 120px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -159,6 +158,11 @@
 
     .container h2 {
         font-size: 1rem;
+    }
+
+    .malaysia-first-logo .partner-logo{
+        width: 100%;
+        max-width: 140px;
     }
 
 }
