--- a/assets/css/responsive/main/main_991.css
+++ b/assets/css/responsive/main/main_991.css
@@ -10,9 +10,10 @@
         right: 0;
         background-color: var(--dark-blue);
         height: 100vh;
-        padding: 0;
+        padding-bottom: 80px !important;
         z-index: 1000;
         transition: transform 0s ease;
+        overflow-y: auto;
     }
 
     .dropdown-menu {
@@ -53,7 +54,7 @@
     }
 
     .nav-link {
-        margin: 10px 0;
+        margin: 5px 0;
         padding: 10px 20px;
         text-align: left;
         display: inline-block;
@@ -70,6 +71,12 @@
     .nav-link:hover::after,
     .nav-link.active::after {
         width: calc(100% - 30px);
+    }
+
+    .nav-link span{
+        margin-left: 5px;
+        width: 100%;
+        
     }
 
     @keyframes slideIn {
